# amtl-tts

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  test_tts.py  tts_engine.py  vitest.config.ts
alembic/: env.py
alembic/versions/: 001_initial_schema.py
src/: app.py  app.ts  config.py  middleware.py  server.ts  store.py
src/models/: __init__.py  assessment.py  base.py  benchmark.py  breach-forecast.ts  compliance.ts  organisation.py  remediation-policy.ts  shared.ts  threat-actor.ts  vulnerability.py  wazuh.py
src/policies/: default-remediation.yaml
src/routers/: __init__.py  benchmarks.py  health.py  wazuh.py
src/routes/: breach-forecast.ts  compliance.ts  remediation-policy.ts  threat-actor.ts
src/schemas/: __init__.py  benchmark.py  health.py  wazuh.py
src/services/: __init__.py  benchmark_engine.py  breach-forecast.ts  compliance.ts  remediation-policy.ts  threat-actor.ts  wazuh_client.py  wazuh_correlation.py
src/utils/: clock.ts  id.ts
tests/: conftest.py  test_api_comprehensive.py  test_integration_cross_milestone.py  test_milestone21_wazuh_beast.py  test_milestone21_wazuh_extended.py  test_milestone22_benchmark_beast.py  test_milestone22_benchmark_extended.py  test_milestone23_production_beast.py  test_milestone23_production_extended.py  test_models_and_schemas.py  test_stress_and_boundary.py
tests/beast/: helpers.ts  milestone-17-remediation-policy.beast.test.ts  milestone-18-breach-forecast.beast.test.ts  (+2 more)
